trunk/Archive2/16/393722563d4326/main.cpp
struct CannotCopy {
    CannotCopy(const CannotCopy&) = delete;
    CannotCopy() = default;
};

CannotCopy foo()
{
    return {};                  // This works
}

CannotCopy bar()
{
    return CannotCopy();        // This doesn't
}

CannotCopy baz()
{
    return CannotCopy{};        // This doesn't
}
